Bug 1884814 - Respect MOZ_FORCE_DISABLE_E10S if MOZILLA_OFFICIAL is not set. r=mossop DONTBUILD

We are checking to ensure that either MOZILLA_OFFICIAL is undefined or that
xpc::AreNonLocalConnectionsDisabled() is true. If either check matches,
we move on to check the MOZ_FORCE_DISABLE_E10S environment variable which
must equal "1" to proceed with disabling e10s.

Differential Revision: https://phabricator.services.mozilla.com/D218999